--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.4.2
+  google_sign_in: ^6.1.0
+  cloud_firestore: ^4.5.2
+  image_picker: ^0.8.7+4
+  image_cropper: ^3.0.3
+  syncfusion_flutter_datepicker: ^21.1.41
+  firebase_storage: ^11.1.1
+  dropdown_search: ^3.0.1
+  animated_text_kit: ^4.2.2
+  flutter_rating_bar: ^4.0.1
+  flutter_staggered_grid_view: ^0.6.2
+  transparent_image: ^2.0.1
+  video_trimmer: ^2.0.1
+  file_picker: ^5.2.11
+  video_thumbnail: ^0.5.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
